New Testsuites Upload - Upgrade 2.1

--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,22431],[[4,5,6,0,[],[1,29,22399],[[7,8,9,0,[],[1,31,22394],[[10,11,12,0,[],[1,33,22386],[],[[13,0,0,[],[1,255,11279],[]],[14,0,0,[],[1,11539,10878],[]]],[],[2,2,0,0]]],[],[],[2,2,0,0]]],[],[],[2,2,0,0]]],[],[],[2,2,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,15344],[[4,5,6,0,[],[1,35,15308],[[7,8,9,0,[],[1,37,15304],[[10,11,12,0,[],[1,39,15298],[],[[13,0,0,[],[1,352,14982],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Robotframework All In One","*/Users/jakubbrzezny/Documents/CODER/BUILDING/MY_APPS/robotframework_all_in_one","*.","*Test","*/Users/jakubbrzezny/Documents/CODER/BUILDING/MY_APPS/robotframework_all_in_one/test","*test","*Selenium Library","*/Users/jakubbrzezny/Documents/CODER/BUILDING/MY_APPS/robotframework_all_in_one/test/selenium_library","*test/selenium_library","*Test Youtube Search","*/Users/jakubbrzezny/Documents/CODER/BUILDING/MY_APPS/robotframework_all_in_one/test/selenium_library/test_youtube_search.robot","*test/selenium_library/test_youtube_search.robot","*Search &amp; Play 1 - Pete Doherty Royal Albert Hall","*Search &amp; Play 2 - Brian Eno Spirits Drifting"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Robotframework All In One","*/Users/jakubbrzezny/Documents/CODER/BUILDING/MY_APPS/robotframework_all_in_one","*.","*Test","*/Users/jakubbrzezny/Documents/CODER/BUILDING/MY_APPS/robotframework_all_in_one/test","*test","*Selenium Library","*/Users/jakubbrzezny/Documents/CODER/BUILDING/MY_APPS/robotframework_all_in_one/test/selenium_library","*test/selenium_library","*Test Onet Mail","*/Users/jakubbrzezny/Documents/CODER/BUILDING/MY_APPS/robotframework_all_in_one/test/selenium_library/test_onet_mail.robot","*test/selenium_library/test_onet_mail.robot","*Open Mailbox Panel - xFail Case - Unsuccessful Login"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:22","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:22","fail":0,"id":"s1","label":"Robotframework All In One","name":"Robotframework All In One","pass":2,"skip":0},{"elapsed":"00:00:22","fail":0,"id":"s1-s1","label":"Robotframework All In One.Test","name":"Test","pass":2,"skip":0},{"elapsed":"00:00:22","fail":0,"id":"s1-s1-s1","label":"Robotframework All In One.Test.Selenium Library","name":"Selenium Library","pass":2,"skip":0},{"elapsed":"00:00:22","fail":0,"id":"s1-s1-s1-s1","label":"Robotframework All In One.Test.Selenium Library.Test Youtube Search","name":"Test Youtube Search","pass":2,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:15","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:15","fail":0,"id":"s1","label":"Robotframework All In One","name":"Robotframework All In One","pass":1,"skip":0},{"elapsed":"00:00:15","fail":0,"id":"s1-s1","label":"Robotframework All In One.Test","name":"Test","pass":1,"skip":0},{"elapsed":"00:00:15","fail":0,"id":"s1-s1-s1","label":"Robotframework All In One.Test.Selenium Library","name":"Selenium Library","pass":1,"skip":0},{"elapsed":"00:00:15","fail":0,"id":"s1-s1-s1-s1","label":"Robotframework All In One.Test.Selenium Library.Test Onet Mail","name":"Test Onet Mail","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1678789208642;
+window.output["baseMillis"] = 1678790028735;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 22448;
+window.output["generated"] = 15357;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
